--- a/legendariosMinas/package.json
+++ b/legendariosMinas/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@po-ui/ng-components": "^14.11.0",
+    "@po-ui/ng-templates": "^14.11.0",
     "bootstrap": "^5.2.2",
     "jquery": "^3.6.1",
     "rxjs": "~7.5.0",
