--- a/front/legendariosMinas/package.json
+++ b/front/legendariosMinas/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.2.0",
+    "@angular/cdk": "^14.2.7",
     "@angular/common": "^14.2.0",
     "@angular/compiler": "^14.2.0",
     "@angular/core": "^14.2.0",
@@ -19,6 +20,7 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@po-ui/ng-components": "^14.11.0",
     "@po-ui/ng-templates": "^14.11.0",
     "bootstrap": "^5.2.2",
