--- a/back/legendarios_API/legendarios_API/legendarios_API.csproj
+++ b/back/legendarios_API/legendarios_API/legendarios_API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.0" />
     <PackageReference Include="Dapper" Version="2.0.123" />
+    <PackageReference Include="mercadopago-sdk" Version="2.2.3" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
     <PackageReference Include="MySqlConnector" Version="2.2.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
@@ -16,7 +17,6 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
-    <Folder Include="Service\" />
   </ItemGroup>
 
 </Project>
