--- a/front/legendariosMinas/package.json
+++ b/front/legendariosMinas/package.json
@@ -25,6 +25,7 @@
     "@po-ui/ng-templates": "^14.11.0",
     "bootstrap": "^5.2.2",
     "jquery": "^3.6.1",
+    "mercadopago": "^1.5.14",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
