--- a/front/legendariosMinas/nginx.conf
+++ b/front/legendariosMinas/nginx.conf
@@ -1,17 +1,24 @@
-worker_processes  1;
+worker_processes  auto;
 
 events {
     worker_connections  1024;
 }
 
 http {
+
 server  {
      listen 443 ssl;
      server_name legendarios.io www.legendarios.io;
-     ssl_certificate certs/cert.pem;
-     ssl_certificate_key certs/cert.pem;
-     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+     ssl_certificate /root/certs/fullchain.pem;
+     ssl_certificate_key /root/certs/privkey.pem;
+     ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
      ssl_ciphers HIGH:!aNULL:!MD5;
+
+    default_type application/javascript;
+
+
+
+  sendfile on;
 
     location / {
           root /usr/share/nginx/html;
