--- a/back/legendarios_API/legendarios_API/legendarios_API.csproj
+++ b/back/legendarios_API/legendarios_API/legendarios_API.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
+    <Folder Include="Interfaces\" />
   </ItemGroup>
 
 </Project>
