--- a/front/legendariosMinas/nginx.conf
+++ b/front/legendariosMinas/nginx.conf
@@ -1,28 +1,12 @@
-worker_processes  auto;
+server {
+  listen 443 ssl;
+  server_name localhost;
+  ssl_certificate /etc/nginx/ssl/cert.pem;
+  ssl_certificate_key /etc/nginx/ssl/key.pem;
 
-events {
-    worker_connections  1024;
-}
-
-http {
-
-server  {
-     listen 443 ssl;
-     server_name legendarios.io www.legendarios.io;
-     ssl_certificate /root/certs/fullchain.pem;
-     ssl_certificate_key /root/certs/privkey.pem;
-     ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
-     ssl_ciphers HIGH:!aNULL:!MD5;
-
-    default_type application/javascript;
-
-
-
-  sendfile on;
-
-    location / {
-          root /usr/share/nginx/html;
-          try_files $uri $uri/ /index.html =404;
-    }
-}
+  location / {
+    root /usr/share/nginx/html;
+    index index.html;
+    try_files $uri $uri/ /index.html =404;
+  }
 }
